updated report and references

--- a/Report/References_Styles/References.bib
+++ b/Report/References_Styles/References.bib
@@ -1269,3 +1269,35 @@ In this paper we explain the development of this methodology using a small sampl
 	pages = {1283},
 	file = {Chan et al. - 2022 - Mitigating the Multicollinearity Problem and Its M.pdf:C\:\\Users\\Guillermo\\Zotero\\storage\\KGL84PB3\\Chan et al. - 2022 - Mitigating the Multicollinearity Problem and Its M.pdf:application/pdf},
 }
+
+@article{hiscock_quantifying_2002,
+	title = {Quantifying the {Size} of {Artefact} {Assemblages}},
+	volume = {29},
+	shorttitle = {Quantifying the {Size} of {Artefact} {Assemblages}},
+	doi = {10.1006/jasc.2001.0705},
+	abstract = {Stone artefacts are broken, burnt and weathered. Processes such as these may act differentially across categories, and will therefore affect interpretations of assemblage size and composition. This paper advocates a more detailed consideration of abundance estimates in artefact analyses, being guided by the understandings built up in archaeological studies of fauna, and begins the process by developing some basic units of measurement for counting flaked stone.},
+	journal = {Journal of Archaeological Science},
+	author = {Hiscock, Peter},
+	year = {2002},
+	keywords = {Taphonomy, Breakage, artifacts, Abundance estimation, lithics, minimum numbers},
+	pages = {251--258},
+	file = {Hiscock - 2002 - Quantifying the Size of Artefact Assemblages.pdf:C\:\\Users\\Guillermo\\Zotero\\storage\\8FJE487G\\Hiscock - 2002 - Quantifying the Size of Artefact Assemblages.pdf:application/pdf},
+}
+
+@article{byers_flake_2015,
+	title = {Flake {Morphology}, {Fluvial} {Dynamics}, and {Debitage} {Transport} {Potential}: {FLAKES}, {FLUVIAL} {DYNAMICS}, {AND} {DEBITAGE} {TRANSPORT}},
+	volume = {30},
+	issn = {08836353},
+	shorttitle = {Flake {Morphology}, {Fluvial} {Dynamics}, and {Debitage} {Transport} {Potential}},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/gea.21524},
+	doi = {10.1002/gea.21524},
+	language = {en},
+	number = {5},
+	urldate = {2023-07-06},
+	journal = {Geoarchaeology},
+	author = {Byers, David A. and Hargiss, Elise and Finley, Judson Byrd},
+	month = sep,
+	year = {2015},
+	pages = {379--392},
+	file = {Byers et al. - 2015 - Flake Morphology, Fluvial Dynamics, and Debitage T.pdf:C\:\\Users\\Guillermo\\Zotero\\storage\\RGNZKH23\\Byers et al. - 2015 - Flake Morphology, Fluvial Dynamics, and Debitage T.pdf:application/pdf},
+}
